# lulkien-anyrun-plugins

./: Cargo.toml  README.md
UWSM-Launcher/: Cargo.toml
UWSM-Launcher/src/: crawler.rs  lib.rs  runner.rs  utils.rs
UWSM-Launcher/src/types/: cache.rs  config.rs  desktop_entry.rs  mod.rs
app-launcher/: Cargo.toml  README.md
app-launcher/src/: lib.rs  runner.rs  utils.rs
app-launcher/src/types/: cache.rs  config.rs  desktop_entry.rs
power-menu/: Cargo.toml
power-menu/src/: config.rs  entry.rs  lib.rs  notify.rs  runner.rs  state.rs
src/: crawler.rs  lib.rs  runner.rs  utils.rs
src/types/: cache.rs  config.rs  desktop_entry.rs  mod.rs  state.rs
